@@ -1,3 +1,9 @@
+2006-07-07  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* javax/swing/AbstractButton.java
+	(setHorizontalAlignment): Check for illegal argument,
+	(setVerticalAlignment): Likewise.
+
 2006-07-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>
 
 	* javax/swing/text/html/TableView.java
